# dorn

./: LICENSE  README.md  pyproject.toml
src/dorn/: __init__.py  _enums.py  _transform.py  _typing.py  eventhandlers.py  network.py  neuronpopulation.py  refractoriness.py  spikes.py  stdp.py  synapses.py  synaptictraces.py
src/dorn/poissonprocess/: __init__.py  exponentially_decaying.py  homogeneous.py
