[project]
name = "dorn"
authors = [
  {name = "Simon Altrogge", email = "simon.altrogge@uni-bonn.de"},
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dynamic = ["version", "description"]
requires-python = "~=3.9"
dependencies = [
  "numpy~=1.22",
  "typing_extensions~=4.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "black~=23.3",
  "isort~=5.12",
]
test = []
doc = []

[project.urls]
"Homepage" = "https://github.com/simonaltrogge/dorn"
"Bug Tracker" = "https://github.com/simonaltrogge/dorn/issues"
"Source" = "https://github.com/simonaltrogge/dorn"

[build-system]
requires = ["flit_core~=3.2"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"